test/files/neg/t8777.check
t8777.scala:12: error: type mismatch;
 found   : Test.this.Shadow(in trait Test)
 required: Test.this.Shadow(in trait Test)
    override def test: Shadow = super.test
                                      ^
1 error
